--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
   <title>Simon</title>
 </head>
 <body>
+  <div class="start-end-section">
+    <h1 class="start-game"></h1>
+    <div class="start-end">
+      <button class="btn start">
+        Start
+      </button>
+      <button class="btn stop">
+        Stop
+      </button>
+    </div>
+  </div>
   <section class="simon">
     <div class="middle"></div>
     <div class="button yellow"></div>
